[gd_scene load_steps=3 format=2]

[ext_resource path="res://interface/PauseScreen.gd" type="Script" id=1]
[ext_resource path="res://interface/theme/default_theme_white.tres" type="Theme" id=2]

[node name="PauseScreen" type="Popup"]
pause_mode = 2
anchor_top = 0.757
anchor_right = 1.0
anchor_bottom = 0.898
margin_top = -314.2
margin_bottom = -313.8
popup_exclusive = true
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
anchor_top = 2.007
anchor_right = 1.0
anchor_bottom = 2.007
margin_left = 350.0
margin_right = -350.0
margin_bottom = 34.675
theme = ExtResource( 2 )
text = "Go to Level Select"

[node name="CloseButton" type="Button" parent="."]
pause_mode = 2
anchor_top = 4.162
anchor_right = 1.0
anchor_bottom = 4.162
margin_left = 350.0
margin_right = -350.0
margin_bottom = 34.675
theme = ExtResource( 2 )
text = "Resume"

[node name="RestartButton" type="Button" parent="."]
pause_mode = 2
anchor_top = 3.116
anchor_right = 1.0
anchor_bottom = 3.116
margin_left = 350.0
margin_right = -350.0
margin_bottom = 34.675
theme = ExtResource( 2 )
text = "Restart Level"

[node name="Panel" type="Panel" parent="."]
anchor_top = 0.063
anchor_right = 1.0
anchor_bottom = 0.763
margin_left = 300.0
margin_right = -300.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="Label" type="Label" parent="Panel"]
anchor_top = 0.175
anchor_right = 1.0
anchor_bottom = 0.218
theme = ExtResource( 2 )
text = "Game Paused"
align = 1
valign = 1

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
